--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </li>
             </ul>
 
-            <a class="pricing-plan__sign" href="#">Assine Já</a>
+            <a class="pricing-plan__sign" href="https://pay.kirvano.com/04319133-2ee6-4c7c-8441-5ec6c6bb09c2">Assine Já</a>
         </div>
 
         <div class="pricing-plan">
@@ -113,7 +113,7 @@
                 </li>
             </ul>
 
-            <a class="pricing-plan__sign" href="#">Assine Já</a>
+            <a class="pricing-plan__sign" href="https://pay.kirvano.com/04319133-2ee6-4c7c-8441-5ec6c6bb09c2">Assine Já</a>
         </div>
 
         <div class="pricing-plan">
@@ -157,7 +157,7 @@
                 </li>
             </ul>
 
-            <a class="pricing-plan__sign" href="#">Assine Já</a>
+            <a class="pricing-plan__sign" href="https://pay.kirvano.com/04319133-2ee6-4c7c-8441-5ec6c6bb09c2">Assine Já</a>
         </div>
     </section>
 </body>
