--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </li>
     
                 <li>
-                    <a href="#">Contato</a>
+                    <a href="https://wa.me/5511990273116">Contato</a>
                 </li>
             </ul>
         </nav>
